maven 镜像仓库修改

--- a/spring-eureka-first/src/main/resources/application.yml
+++ b/spring-eureka-first/src/main/resources/application.yml
@@ -10,7 +10,7 @@ eureka:
     register-with-eureka: false
 spring:
   application:
-    name: eureka-server
+    name: eureka-server-one
   security:
     user:
       name: admin
