--- a/spring-eureka-first/pom.xml
+++ b/spring-eureka-first/pom.xml
@@ -51,6 +51,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>spring-eureka-one</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -61,9 +62,12 @@
 
     <repositories>
         <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
+            <id>Aliyun</id>
+            <name>Aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
