--- a/spring-eureka-second/pom.xml
+++ b/spring-eureka-second/pom.xml
@@ -52,6 +52,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>spring-eureka-second</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -62,9 +63,12 @@
 
     <repositories>
         <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
+            <id>Aliyun</id>
+            <name>Aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
