--- a/spring-eureka-second/src/main/resources/application.yml
+++ b/spring-eureka-second/src/main/resources/application.yml
@@ -10,7 +10,7 @@ eureka:
       defaultZone: http://admin:123456@peer1:8001/eureka/
 spring:
   application:
-    name: eureka-server
+    name: eureka-server-sec
   security:
     user:
       name: admin
