--- a/spring-redis-cluster/pom.xml
+++ b/spring-redis-cluster/pom.xml
@@ -26,13 +26,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-            <version>2.1.3.RELEASE</version>
-        </dependency>
-        <dependency>
             <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.9.1</version>
         </dependency>
         <dependency>
@@ -62,6 +57,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>spring-redis-cluster</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -72,9 +68,12 @@
 
     <repositories>
         <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
+            <id>Aliyun</id>
+            <name>Aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
