--- a/spring-redis-cluster/pom.xml
+++ b/spring-redis-cluster/pom.xml
@@ -68,12 +68,9 @@
 
     <repositories>
         <repository>
-            <id>Aliyun</id>
-            <name>Aliyun</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
+            <id>nexus-aliyun</id>
+            <name>Nexus aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
         </repository>
     </repositories>
 
