maven 镜像仓库修改

--- a/spring-redis-cluster/pom.xml
+++ b/spring-redis-cluster/pom.xml
@@ -68,9 +68,9 @@
 
     <repositories>
         <repository>
-            <id>nexus-aliyun</id>
-            <name>Nexus aliyun</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
         </repository>
     </repositories>
 
