--- a/spring-redis-cluster/src/main/resources/application.yml
+++ b/spring-redis-cluster/src/main/resources/application.yml
@@ -1,18 +1,9 @@
 server:
   port: 8003
-eureka:
-  instance:
-    hostname: peer1
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    serviceUrl:
-      defaultZone: http://admin:123456@peer1:8001/eureka/,http://admin:123456@peer2:8001/eureka/
 spring:
   application:
     name: redis-server
   redis:
     cluster:
-      nodes: redis-cluster:16001,redis-cluster:16002,redis-cluster:16003
-    password: aubergine
-    
+      nodes: 192.168.1.154:6379,192.168.1.154:6380,192.168.1.155:6379,192.168.1.155:6380,192.168.1.156:6379,192.168.1.156:6380
+    password: admin
