--- a/spring-redis-cluster/pom.xml
+++ b/spring-redis-cluster/pom.xml
@@ -31,6 +31,11 @@
             <version>3.9.1</version>
         </dependency>
         <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-data-21</artifactId>
+            <version>3.10.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             <version>2.0.1.RELEASE</version>
