关闭eureka的自我保护

--- a/spring-eureka-first/src/main/resources/application.yml
+++ b/spring-eureka-first/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 eureka:
   instance:
     hostname: peer1
+  server:
+    enable-self-preservation: false
   client:
     fetch-registry: false
     serviceUrl:
