--- a/spring-eureka-second/src/main/resources/application.yml
+++ b/spring-eureka-second/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 eureka:
   instance:
     hostname: peer2
+  server:
+    enable-self-preservation: false
   client:
     register-with-eureka: false
     fetch-registry: false
