--- a/spring-eureka-first/pom.xml
+++ b/spring-eureka-first/pom.xml
@@ -62,12 +62,9 @@
 
     <repositories>
         <repository>
-            <id>Aliyun</id>
-            <name>Aliyun</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
         </repository>
     </repositories>
 
